# website

./: .gitignore  .gitlab-ci.yml  .htaccess  .lastbuild.yaml  404.html  README.md  _redirects  astro.config.mjs  build.sh  build_projects_page.py  bureau.yaml  contact.html  equipe.html  faq.html  formation.html  formaweb-1.html  formaweb-2-animations.html  formaweb-2-before.html  formaweb-2-position-absolute.html  formaweb-3-dom.html  formaweb-4.html  formaweb-issues-churros.html  hebergement.html  index.html  ortfodb.yaml  package.json  partenaire.html  pnpm-lock.yaml  presentation.html  pyproject.toml  realisation.html  realisation.html.j2  reparation.html  services.html
css/: flowbite.min.css
js/: app.js  flowbite.js
projects/: clone.py
public/: _redirects
src/components/: Badge.astro  Card.astro  Hero.svelte  HeroBackground.svelte  Member.astro  Member.svelte  Navbar.svelte  Socials.astro  Welcome.astro
src/components/icons/: discord.svelte  globe.svelte
src/content/: formations.json  links.json  services.json  teams.json  words.json
src/layouts/: BaseLayout.astro  HeroLayout.astro  HomeLayout.astro  PageLayout.astro
src/pages/: contact.astro  contact.mdx  equipe.astro  equipe.mdx  formations.astro  formations.mdx  index.astro  index.mdx  partenaires.astro  partenaires.mdx  services.astro  services.mdx
src/styles/: global.css
static/: _redirects
